Added cardview BandsOfWeek

--- a/My Band/Resources/layout/HomeLayout.axml
+++ b/My Band/Resources/layout/HomeLayout.axml
@@ -1,241 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minWidth="25px"
-    android:minHeight="25px"
-    android:background="#0c0414">
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout1">
-        <TextView
-            android:text="Bandas da Semana"
-            android:layout_marginLeft="10dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:layout_width="match_parent"
-            android:textColor="#e5e5e5"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView200" />
-    </LinearLayout>
+    android:background="#F5F5F5"
+    android:padding="8dp">
     <LinearLayout
         android:orientation="vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:id="@+id/llBandsRank">
-        <RelativeLayout
-            android:orientation="horizontal"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            card_view:cardUseCompatPadding="false"
+            android:layout_margin="0dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout1">
+            android:layout_height="225dp"
+            android:layout_gravity="center"
+            android:id="@+id/card"
+            card_view:cardElevation="8dp"
+            card_view:cardCornerRadius="2dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:orientation="vertical"
+                android:id="@+id/rlCardView">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp"
+                    android:background="@drawable/bands4"
+                    android:id="@+id/imageView"
+                    android:scaleType="centerCrop" />
+                <TextView
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="90dp"
+                    android:layout_marginLeft="16dp"
+                    android:textSize="24sp"
+                    android:text="Bandas da semana"
+                    android:textColor="#FFFFFF" />
+            </RelativeLayout>
             <TextView
-                android:text="Tool"
-                android:textColor="#e5e5e5"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:id="@+id/tvRank1" />
-            <RatingBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_alignParentRight="true"
-                style="@style/CustomRatingBar"
-                android:id="@+id/rbRank1"
-                android:numStars="5"
-                android:stepSize="1.0"
-                android:isIndicator="true" />
-        </RelativeLayout>
-        <RelativeLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout2">
-            <TextView
-                android:text="Anihilation"
-                android:textColor="#e5e5e5"
-                android:layout_alignParentLeft="true"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:id="@+id/tvRank2" />
-            <RatingBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_alignParentRight="true"
-                style="@style/CustomRatingBar"
-                android:id="@+id/rbRank2"
-                android:numStars="5"
-                android:stepSize="0.01"
-                android:isIndicator="true" />
-        </RelativeLayout>
-        <RelativeLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout3">
-            <TextView
-                android:text="CPM 44"
-                android:textColor="#e5e5e5"
-                android:layout_alignParentLeft="true"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:id="@+id/tvRank3" />
-            <RatingBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_alignParentRight="true"
-                style="@style/CustomRatingBar"
-                android:id="@+id/rbRank3"
-                android:numStars="5"
-                android:stepSize="0.01"
-                android:isIndicator="true" />
-        </RelativeLayout>
-        <RelativeLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout4">
-            <TextView
-                android:text="Dark Rod"
-                android:textColor="#e5e5e5"
-                android:layout_alignParentLeft="true"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:id="@+id/tvRank4" />
-            <RatingBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_alignParentRight="true"
-                style="@style/CustomRatingBar"
-                android:id="@+id/rbRank4"
-                android:numStars="5"
-                android:stepSize="0.01"
-                android:isIndicator="true" />
-        </RelativeLayout>
-        <RelativeLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout5">
-            <TextView
-                android:text="Node"
-                android:textColor="#e5e5e5"
-                android:layout_alignParentLeft="true"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:id="@+id/tvRank5" />
-            <RatingBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_alignParentRight="true"
-                style="@style/CustomRatingBar"
-                android:id="@+id/rbRank5"
-                android:numStars="5"
-                android:stepSize="0.01"
-                android:isIndicator="true" />
-        </RelativeLayout>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="14sp"
+                android:layout_marginTop="150dp"
+                android:layout_marginLeft="16dp"
+                android:text="Conheça as bandas mais curtidas da semana!"
+                android:textColor="#000000" />
+            <Button
+                android:text="Explorar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="175dp"
+                android:layout_marginLeft="240dp"
+                android:textColor="#51146c"
+                android:background="@android:color/transparent"
+                android:id="@+id/btnExplore"/>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
-    <TextView
-        android:text="Sugeridos para você"
-        android:textColor="#e5e5e5"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/textView5" />
-    <RelativeLayout
-        android:layout_height="120dp"
-        android:layout_width="match_parent"
-        android:id="@+id/llConteinerLikedBands">
-        <HorizontalScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/hsvLikedBands">
-            <LinearLayout
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content">
-                <ImageView
-                    android:src="@android:drawable/ic_menu_gallery"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp" />
-                <ImageView
-                    android:src="@android:drawable/ic_menu_gallery"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp" />
-                <ImageView
-                    android:src="@android:drawable/ic_menu_gallery"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp" />
-                <ImageView
-                    android:src="@android:drawable/ic_menu_gallery"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp" />
-            </LinearLayout>
-        </HorizontalScrollView>
-    </RelativeLayout>
-    <TextView
-        android:text="O que há de novo"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:textColor="#e5e5e5"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView5" />
-    <RelativeLayout
-        android:layout_height="120dp"
-        android:layout_width="match_parent"
-        android:id="@+id/llConteinerLikedBands">
-        <HorizontalScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/hsvLikedBands">
-            <LinearLayout
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content">
-                <ImageView
-                    android:src="@android:drawable/ic_menu_gallery"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp" />
-                <ImageView
-                    android:src="@android:drawable/ic_menu_gallery"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp" />
-                <ImageView
-                    android:src="@android:drawable/ic_menu_gallery"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp" />
-                <ImageView
-                    android:src="@android:drawable/ic_menu_gallery"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp" />
-            </LinearLayout>
-        </HorizontalScrollView>
-    </RelativeLayout>
 </LinearLayout>
