--- a/My Band/Resources/layout/HomeLayout.axml
+++ b/My Band/Resources/layout/HomeLayout.axml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F5F5F5"
     android:padding="8dp">
+<!--Card Bandas da Semana-->
     <LinearLayout
         android:orientation="vertical"
-        android:layout_height="match_parent"
+        android:layout_height="255dp"
         android:layout_width="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp">
@@ -56,7 +58,88 @@
                 android:layout_marginLeft="240dp"
                 android:textColor="#51146c"
                 android:background="@android:color/transparent"
-                android:id="@+id/btnExplore"/>
+                android:id="@+id/btnExplore" />
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+<!--Card Bandas Sugeridas-->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="8dp">
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            card_view:cardUseCompatPadding="false"
+            android:layout_margin="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="225dp"
+            android:layout_gravity="center"
+            android:id="@+id/card"
+            card_view:cardElevation="8dp"
+            card_view:cardCornerRadius="2dp">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:id="@+id/rlSuggestedBands"
+                android:layout_marginTop="0dp">
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="16dp"
+                    android:textSize="24sp"
+                    android:text="Bandas sugeridas"
+                    android:textColor="#51146c"
+                    android:id="@+id/textView2" />
+                <HorizontalScrollView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/hsvSuggestedBands"
+                    android:layout_marginLeft="16dp">
+                    <LinearLayout
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_marginTop="15dp">
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_margin="3dp"
+                            android:background="@drawable/aliados"
+                            android:id="@+id/imageView"
+                            android:scaleType="centerCrop" />
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_margin="3dp"
+                            android:background="@drawable/bandahonra"
+                            android:id="@+id/imageView"
+                            android:scaleType="centerCrop" />
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_margin="3dp"
+                            android:background="@drawable/cbjr"
+                            android:id="@+id/imageView"
+                            android:scaleType="centerCrop" />
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_margin="3dp"
+                            android:background="@drawable/cpm22"
+                            android:id="@+id/imageView"
+                            android:scaleType="centerCrop" />
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_margin="3dp"
+                            android:background="@drawable/venice"
+                            android:id="@+id/imageView"
+                            android:scaleType="centerCrop" />
+                    </LinearLayout>
+                </HorizontalScrollView>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </LinearLayout>
