--- a/My Band/Resources/layout/HomeLayout.axml
+++ b/My Band/Resources/layout/HomeLayout.axml
@@ -65,7 +65,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="175dp"
                         android:layout_marginLeft="240dp"
-                        android:textColor="#51146c"
+                        android:textColor="#7b1fa2"
                         android:background="@android:color/transparent"
                         android:id="@+id/btnExplore" />
                 </android.support.v7.widget.CardView>
@@ -100,7 +100,7 @@
                             android:layout_marginLeft="16dp"
                             android:textSize="24sp"
                             android:text="Bandas sugeridas"
-                            android:textColor="#51146c"
+                            android:textColor="#7b1fa2"
                             android:id="@+id/textView2" />
                         <HorizontalScrollView
                             android:layout_width="wrap_content"
